--- a/H1EMU-Launcher/Windows/AboutPage.xaml
+++ b/H1EMU-Launcher/Windows/AboutPage.xaml
@@ -12,106 +12,119 @@
         Background="#FF2A2A32"
         FontFamily="Bahnschrift Light"
         FontSize="16"
-        ResizeMode="NoResize">
+        ResizeMode="NoResize"
+        Loaded="MainAboutLoaded"
+        Closing="MainAboutClosing"
+        Activated="MainAboutActivated">
 
         <WindowChrome.WindowChrome>
             <WindowChrome GlassFrameThickness="0" CornerRadius="0" CaptionHeight="0" UseAeroCaptionButtons="False" ResizeBorderThickness="0"/>
         </WindowChrome.WindowChrome>
 
     <Grid>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="*"/>
-        </Grid.ColumnDefinitions>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="5*"/>
-        </Grid.RowDefinitions>
-        <!--Creates the Grid to host the control box and title/icon-->
-        <Grid Grid.Row="0" Grid.Column="0" MouseLeftButtonDown="Grid_MouseLeftButtonDown" Background="#FF2A2A32">
+        <Grid>
+            <Grid.Effect>
+                <BlurEffect x:Name="aboutPageBlur" Radius="0" KernelType="Gaussian"/>
+            </Grid.Effect>
+            
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*"/>
-                <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
+            
             <Grid.RowDefinitions>
                 <RowDefinition Height="*"/>
-            </Grid.RowDefinitions>
-
-            <!--Creates the title and icon-->
-            <DockPanel Grid.Row="0" Grid.Column="0" Height="60" HorizontalAlignment="Left" Margin="23,0,0,0">
-                <Button Width="175" Height="45" BorderThickness="0" VerticalAlignment="Bottom" Style="{DynamicResource ImageButton}">
-                    <Button.Background>
-                        <ImageBrush ImageSource="..\Resources\H1EmuIcon.png"/>
-                    </Button.Background>
-                </Button>
-            </DockPanel>
-
-            <!-- Top bar grid. -->
-            <DockPanel Grid.Column="1" Grid.Row="0" Margin="0">
-                <Button x:Name="CloseButton" RenderOptions.BitmapScalingMode="Fant" Content="" Width="44" Height="30" VerticalAlignment="Center" HorizontalAlignment="Right" BorderThickness="0" Click="CloseButton_Click"  Margin="0,0,25,0" Style="{StaticResource CloseButtonStyle}">
-                    <Button.Background>
-                        <ImageBrush ImageSource="..\Resources\Exit.png"/>
-                    </Button.Background>
-                </Button>
-            </DockPanel>
-        </Grid>
-        <Grid Grid.Row="1" Background="#1C1B22" Margin="25,5,25,25" UseLayoutRounding="True">
-            <Grid.Effect>
-                <DropShadowEffect BlurRadius="15" Direction="-90" RenderingBias="Quality" ShadowDepth="1"/>
-            </Grid.Effect>
-
-            <Grid.RowDefinitions>
-                <RowDefinition Height="*"/>
+                <RowDefinition Height="5*"/>
             </Grid.RowDefinitions>
             
-            <RichTextBox Background="Transparent" Foreground="White" BorderThickness="0" IsReadOnly="True" Width="600" Margin="25,25,25,25" Cursor="Arrow">
-                <FlowDocument>
-                    <Paragraph TextAlignment="Center" FontSize="20" Foreground="#FFED1C24">
-                        <TextBlock Text="{DynamicResource item126}" TextWrapping="Wrap" TextDecorations="Underline"/>
-                    </Paragraph>
-                    <Paragraph TextAlignment="Center" FontSize="18">
-                        • Kentin •
-                    </Paragraph>
-                    <Paragraph TextAlignment="Center" FontSize="20" Foreground="#FFED1C24">
-                        <TextBlock Text="{DynamicResource item127}" TextWrapping="Wrap" TextDecorations="Underline"/>
-                    </Paragraph>
-                    <Paragraph TextAlignment="Center" FontSize="18">
-                        • Meme (2016 Server) • Avcio (2015 Server) •
-                    </Paragraph>
-                    <Paragraph TextAlignment="Center" FontSize="20" Foreground="#FFED1C24">
-                        <TextBlock Text="{DynamicResource item128}" TextWrapping="Wrap" TextDecorations="Underline"/>
-                    </Paragraph>
-                    <Paragraph TextAlignment="Center" FontSize="18">
-                        • Kentin • LcplReaper • Traqnar •
-                    </Paragraph>
-                    <Paragraph TextAlignment="Center" FontSize="20" Foreground="#FFED1C24">
-                        <TextBlock Text="{DynamicResource item129}" TextWrapping="Wrap" TextDecorations="Underline"/>
-                    </Paragraph>
-                    <Paragraph TextAlignment="Center" FontSize="18">
-                        • Eavilaswayce • Relish • LegendsNeveerrDie • Delusional • KOBUNIX • Rhett • ZamZam • UTIL_TRACELINE • LordWaycrest  • 69_HaxMax • GinnessForever • Chriis • Flo •
-                    </Paragraph>
-                    <Paragraph TextAlignment="Center" FontSize="20" Foreground="#FFED1C24">
-                        <TextBlock Text="{DynamicResource item130}" TextWrapping="Wrap" TextDecorations="Underline"/>
-                    </Paragraph>
-                    <Paragraph TextAlignment="Center" FontSize="18">
-                        • Meme • Chrisisbrown • Cur7 • Movezie • Skoz •
-                    </Paragraph>
-                    <Paragraph TextAlignment="Center" FontSize="20" Foreground="#FFED1C24">
-                        <TextBlock Text="{DynamicResource item131}" TextWrapping="Wrap" TextDecorations="Underline"/>
-                    </Paragraph>
-                    <Paragraph TextAlignment="Center" FontSize="18">
-                        • rob138us •
-                    </Paragraph>
-                    <Paragraph TextAlignment="Center" FontSize="20" Foreground="#FFED1C24">
-                        <TextBlock Text="{DynamicResource item136}" TextWrapping="Wrap" TextDecorations="Underline"/>
-                    </Paragraph>
-                    <Paragraph TextAlignment="Center" FontSize="18">
-                        • YuaneKo (Multilingual) • AZAZ (Chinese) • MostMajestic (Croatian) • Skoz (French) •
-                    </Paragraph>
-                    <Paragraph TextAlignment="Center" FontSize="18" FontWeight="Bold" Margin="0,100,0,0">
-                        <TextBlock Text="{DynamicResource item132}" TextWrapping="Wrap" TextDecorations="Underline"/>
-                    </Paragraph>
-                </FlowDocument>
-            </RichTextBox>
+            <!--Creates the Grid to host the control box and title/icon-->
+            <Grid Grid.Row="0" Grid.Column="0" MouseLeftButtonDown="Grid_MouseLeftButtonDown" Background="#FF2A2A32">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="*"/>
+                </Grid.ColumnDefinitions>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="*"/>
+                </Grid.RowDefinitions>
+
+                <!--Creates the title and icon-->
+                <DockPanel Grid.Row="0" Grid.Column="0" Height="60" HorizontalAlignment="Left" Margin="23,0,0,0">
+                    <Button Width="175" Height="45" BorderThickness="0" VerticalAlignment="Bottom" Style="{DynamicResource ImageButton}">
+                        <Button.Background>
+                            <ImageBrush ImageSource="..\Resources\H1EmuIcon.png"/>
+                        </Button.Background>
+                    </Button>
+                </DockPanel>
+
+                <!-- Top bar grid. -->
+                <DockPanel Grid.Column="1" Grid.Row="0" Margin="0">
+                    <Button x:Name="CloseButton" RenderOptions.BitmapScalingMode="Fant" Content="" Width="44" Height="30" VerticalAlignment="Center" HorizontalAlignment="Right" BorderThickness="0" Click="CloseButton_Click"  Margin="0,0,25,0" Style="{StaticResource CloseButtonStyle}">
+                        <Button.Background>
+                            <ImageBrush ImageSource="..\Resources\Exit.png"/>
+                        </Button.Background>
+                    </Button>
+                </DockPanel>
+            </Grid>
+            <Grid Grid.Row="1" Background="#1C1B22" Margin="25,5,25,25" UseLayoutRounding="True">
+                <Grid.Effect>
+                    <DropShadowEffect BlurRadius="15" Direction="-90" RenderingBias="Quality" ShadowDepth="1"/>
+                </Grid.Effect>
+
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="*"/>
+                </Grid.RowDefinitions>
+
+                <RichTextBox Background="Transparent" Foreground="White" BorderThickness="0" IsReadOnly="True" Width="600" Margin="25,25,25,25" Cursor="Arrow">
+                    <FlowDocument>
+                        <Paragraph TextAlignment="Center" FontSize="20" Foreground="#FFED1C24">
+                            <TextBlock Text="{DynamicResource item126}" TextWrapping="Wrap" TextDecorations="Underline"/>
+                        </Paragraph>
+                        <Paragraph TextAlignment="Center" FontSize="18">
+                            • Kentin •
+                        </Paragraph>
+                        <Paragraph TextAlignment="Center" FontSize="20" Foreground="#FFED1C24">
+                            <TextBlock Text="{DynamicResource item127}" TextWrapping="Wrap" TextDecorations="Underline"/>
+                        </Paragraph>
+                        <Paragraph TextAlignment="Center" FontSize="18">
+                            • Meme (2016 Server) • Avcio (2015 Server) •
+                        </Paragraph>
+                        <Paragraph TextAlignment="Center" FontSize="20" Foreground="#FFED1C24">
+                            <TextBlock Text="{DynamicResource item128}" TextWrapping="Wrap" TextDecorations="Underline"/>
+                        </Paragraph>
+                        <Paragraph TextAlignment="Center" FontSize="18">
+                            • Kentin • LcplReaper • Traqnar •
+                        </Paragraph>
+                        <Paragraph TextAlignment="Center" FontSize="20" Foreground="#FFED1C24">
+                            <TextBlock Text="{DynamicResource item129}" TextWrapping="Wrap" TextDecorations="Underline"/>
+                        </Paragraph>
+                        <Paragraph TextAlignment="Center" FontSize="18">
+                            • Eavilaswayce • Relish • LegendsNeveerrDie • Delusional • KOBUNIX • Rhett • ZamZam • UTIL_TRACELINE • LordWaycrest  • 69_HaxMax • GinnessForever • Chriis • Flo •
+                        </Paragraph>
+                        <Paragraph TextAlignment="Center" FontSize="20" Foreground="#FFED1C24">
+                            <TextBlock Text="{DynamicResource item130}" TextWrapping="Wrap" TextDecorations="Underline"/>
+                        </Paragraph>
+                        <Paragraph TextAlignment="Center" FontSize="18">
+                            • Meme • Chrisisbrown • Cur7 • Movezie • Skoz •
+                        </Paragraph>
+                        <Paragraph TextAlignment="Center" FontSize="20" Foreground="#FFED1C24">
+                            <TextBlock Text="{DynamicResource item131}" TextWrapping="Wrap" TextDecorations="Underline"/>
+                        </Paragraph>
+                        <Paragraph TextAlignment="Center" FontSize="18">
+                            • rob138us •
+                        </Paragraph>
+                        <Paragraph TextAlignment="Center" FontSize="20" Foreground="#FFED1C24">
+                            <TextBlock Text="{DynamicResource item136}" TextWrapping="Wrap" TextDecorations="Underline"/>
+                        </Paragraph>
+                        <Paragraph TextAlignment="Center" FontSize="18">
+                            • YuaneKo (Multilingual) • AZAZ (Chinese) • MostMajestic (Croatian) • Skoz (French) •
+                        </Paragraph>
+                        <Paragraph TextAlignment="Center" FontSize="18" FontWeight="Bold" Margin="0,100,0,0">
+                            <TextBlock Text="{DynamicResource item132}" TextWrapping="Wrap" TextDecorations="Underline"/>
+                        </Paragraph>
+                    </FlowDocument>
+                </RichTextBox>
+            </Grid>
         </Grid>
+
+        <Rectangle x:Name="aboutPageFade" Fill="#40000000" IsHitTestVisible="False" Visibility="Hidden"/>
     </Grid>
 </Window>
