--- a/H1EMU-Launcher/Windows/Launcher.xaml
+++ b/H1EMU-Launcher/Windows/Launcher.xaml
@@ -72,18 +72,22 @@
                         </Grid.RowDefinitions>
                         <!-- Wraps the about project informational -->
                         <WrapPanel Grid.Row="0" Grid.ColumnSpan="2" VerticalAlignment="Center" HorizontalAlignment="Right">
-                            <ComboBox Style="{DynamicResource ComboBox}" x:Name="LangBox" FontSize="15" Margin="10,10,25,0" SelectedIndex="-1" SelectionChanged="ComboBox_SelectionChanged" BorderThickness="2" Foreground="White" Padding="14,2,10,0" VerticalAlignment="Bottom" VerticalContentAlignment="Center" Height="30">
-                                <ComboBoxItem Content="English"/>
-                                <ComboBoxItem Content="Chinese"/>
-                                <ComboBoxItem Content="Croatian"/>
-                                <ComboBoxItem Content="French"/>
-                            </ComboBox>
+                            <Grid>
+                                <ComboBox Style="{DynamicResource ComboBox}" x:Name="LangBox" FontSize="15" Margin="10,10,25,0" SelectedIndex="-1" SelectionChanged="ComboBox_SelectionChanged" BorderThickness="2" Foreground="White" Padding="34,2,10,0" VerticalAlignment="Bottom" VerticalContentAlignment="Center" Height="30">
+                                    <ComboBoxItem Content="English"/>
+                                    <ComboBoxItem Content="Chinese"/>
+                                    <ComboBoxItem Content="Croatian"/>
+                                    <ComboBoxItem Content="French"/>
+                                </ComboBox>
+
+                                <Image Source="..\Resources\Language.png" RenderOptions.BitmapScalingMode="Fant" Width="16" VerticalAlignment="Bottom" HorizontalAlignment="Left" Margin="20,0,0,7"/>
+                            </Grid>
 
                             <TextBlock VerticalAlignment="Center" Margin="0,10,16,0">
-                            <Hyperlink NavigateUri="" Click="AboutHyperlink">
-                                <TextBlock Text="{DynamicResource item65}"/>
-                            </Hyperlink>
-                        </TextBlock>
+                                <Hyperlink Click="AboutHyperlink">
+                                    <TextBlock Text="{DynamicResource item65}"/>
+                                </Hyperlink>
+                            </TextBlock>
 
                             <!-- Wraps the control box components -->
                             <WrapPanel Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Right">
